tags/2013-08-29_cppreference/Archive/87f4d5a671eccea7c196c94793be69b4-358b00f922937f6178194030f4f0e3ca/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:1: error: expected unqualified-id before numeric constant
 305 bool VtController::isSupportedVideoFile(const std::string & inFile) const
 ^
